--- a/style.css
+++ b/style.css
@@ -100,13 +100,29 @@ body {
   stroke-width: 0.6px;
 }
 
+#sidebar {
+  position: relative;
+  height: 80%;
+  margin: 10vh 0;
+  /*background-color: #00ff4c;*/
+}
+
 #options {
+  position: absolute;
+  bottom: 0;
   display: flex;
   flex-direction: column;
   padding: 4px;
   gap: 4px;
-  margin-top: auto;
-  margin-bottom: 10vh;
+  /*margin-top: auto;
+  margin-bottom: 10vh;*/
+}
+
+#demostrations {
+  display: flex;
+  flex-direction: column;
+  padding: 4px;
+  gap: 4px;
 }
 
 .btn {
